# elixir-tree-sitter

./: .gitignore  .gitmodules  README.md  Taskfile.yml  mix.exs
lib/: tree_sitter.ex
lib/tree_sitter/: application.ex
native/elixir_tree_sitter/: Cargo.toml  README.md  Taskfile.yml  build.rs
native/elixir_tree_sitter/src/: lib.rs
test/: tree_sitter_test.exs
