[package]
name = "elixir_tree_sitter"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "elixir_tree_sitter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
tree-sitter = "0.20.10"
tree-sitter-css = "0.19.0"
tree-sitter-html = "0.19.0"
tree-sitter-javascript = "0.20.1"

[build-dependencies]
cc = "*"
